--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "name": "progWeb",
+  "name": "appfood",
   "version": "1.0.0",
-  "description": "Api de cumida",
+  "description": "",
   "main": "index.js",
-  "author": "Eliseu da Luz",
-  "license": "MIT",
   "scripts": {
-	  "build": "tsc",
-	  "run": "nodemon src/index.ts"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.ts"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
-    "eslint": "^8.48.0",
-    "nodemon": "^3.0.1",
-    "typescript": "^5.2.2"
+    "@types/multer": "^1.4.7",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "^8.38.0",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.5.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
